<resources>
    <string name="app_name">UserApp</string>

    <string name="format_name">%1$s %2$s</string>
    <string name="company_logo">company_logo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="siska_khoirunnisa">Siska Khoirunnisa</string>
    <string name="selected_name">Selected Name</string>
    <string name="choose_a_user">Choose a user</string>
    <string name="third_screen">Third Screen</string>
    <string name="avatar">avatar</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="ex_email">siskakhorunnisa@gmail.com</string>
    <string name="try_again">Try Again</string>
    <string name="failed_to_load">Failed to load</string>
</resources>